code/force-app/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__ActivationStatus__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__ActivationStatus__c</fullName>
    <label>Activation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>