code/force-app/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__AsyncApexJobType__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__AsyncApexJobType__c</fullName>
    <label>Async Apex Job Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>