code/force-app/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__LastProcessedDateTime__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__LastProcessedDateTime__c</fullName>
    <label>LastProcessedDateTime</label>
    <type>DateTime</type>
</CustomField>