code/force-app/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__PrimaryDataPackType__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__PrimaryDataPackType__c</fullName>
    <label>Primary DataPack Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>