code/force-app/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__Source__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>