code/force-app/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__Status__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>