code/force-app/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__Type__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>