code/force-app/main/default/objects/omnistudio__VlocityDataPack__c/fields/omnistudio__Version__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__Version__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>